# ipc

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  tests.yml
apps/: main_rx.cpp  main_tx.cpp
include/: contract.h  ipc_data.h  rx.h
proto/: ipc_data.proto
shared/: constants.h  t_ipc_data.cpp  t_ipc_data.h  util.cpp  util.h
shared/proto/: ipc_data.proto
src/: hello.cpp  main_rx.cpp  rx.cpp
src/rx/: main_rx.cpp
tests/: rx.cpp  t_ipc_data.cpp
tests/rx/: rx.cpp
